[package]
name = "rustbackend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3"

hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
time = "0.3.36"
chrono = "0.4.38"
futures-util = "0.3.30"
async-stream = "0.3.5"

